Fixing left and right movement on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,8 @@
   padding: 0;
   font-family: "PT Sans", sans-serif;
 }
-html {
-  overflow-y: scroll;
-  -webkit-overflow-scrolling: touch;
-}
+
+html, body {width: auto!important; overflow-x: hidden!important} 
 
 .home,
 .products,
